Revision history for Perl extension AnyEvent.

5.112 Fri Aug 21 13:59:04 CEST 2009
        - AnyEvent::Handle could cause hard crashes in Net::SSLeay when
          using starttls with an illegal/uncreatable tls context.
        - port to broken win32 perls.

5.111 Sun Aug 16 18:44:36 CEST 2009
	- perl errornously requires sockaddr_un structures returned by the
          kernel to have a specific length. work around this bug by padding
          sockaddr_un structures (found to fail on OS X, as perl only uses
          the correct code for GNU/Linux, but likely to fail on other
          OSes as well).

5.11 Wed Aug 12 17:49:37 CEST 2009
        - fixed a bug in run_cmd with input from filename.
        - create a json coder object when none is given in write direction
          to reduce dependency on JSON.

5.1  Tue Aug 11 03:17:32 CEST 2009
        - tcp_connect now reports the correct error in $!, not an unrelated
          one (was broken since 4.91).
        - AE::Handle did not properly clear rtimeout/wtimeout watchers
          when retrying a tcp_connect.
        - new functions: AnyEvent::Util::run_cmd and close_all_fds_except.
        - fixed wrong documentation in AE::Socket.

5.01 Mon Aug 10 03:16:32 CEST 2009
	- last release broke EV child watchers :/.

5.0  Sun Aug  9 17:32:09 CEST 2009
	- officially introduce and document the AE API.
        - lowering the timeout at runtime did not have immediate effect
          in AnyEvent::Handle.
        - AE::Handle now has separate and independent read and write timeout
          settings.
        - probe for Guard module when AnyEvent::Util is loaded, not at
          runtime (Event doesn't like eval "use" from callbacks, and it avoids
          exporting the probe function).
        - Impl::IOAsync's io watchers did not use the filehandle emulation
          code to work around it's watcher limits.
        - work around IO::Async's problems with overloaded objects.